--- a/site/config.toml
+++ b/site/config.toml
@@ -109,7 +109,7 @@ googleAnalytics = ""
       title = "See more..."
       subtitle = "I have tons of personal projects too"
       image = "pic05.jpg"
-      url = "projects/voodoo_sweet_revengine"
+      url = "404.html"
 
     # You can make more showcases by copy and pasting the code above
 
