--- a/site/config.toml
+++ b/site/config.toml
@@ -143,7 +143,7 @@ googleAnalytics = ""
 
     [[params.footer.social]]
       icon = "fa-linkedin"
-      url= "https://www.linkedin.com/"
+      url= "https://www.linkedin.com/in/maarten-ten-velden/"
       label = "LinkedIn"
 
     [[params.footer.quicklinks]]
