* fix stylesheets not loading over HTTPS

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseURL = "http://www.maartentenvelden.nl"
+baseURL = "//www.maartentenvelden.nl"
 languageCode = "en-us"
 title = "Maarten ten Velden"
 theme = "forty"
