--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Themes directory of example site; ignored so that we can clone the repo
-# inside the themes directory and test the example site with "hugo server".
-exampleSite/themes/
-
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -54,3 +50,4 @@ Temporary Items
 # ========================
 
 site/public/
+site/themes/*/exampleSite/
