--- a/site/config.toml
+++ b/site/config.toml
@@ -109,7 +109,7 @@ disableKinds = ["taxonomy", "section"]
 
     [[params.tiles.showcase]]
       title = "arguments-mini"
-      subtitle = "A library for parsing commandline arguments written in C"
+      subtitle = "A library for parsing commandline arguments written in C++"
       image = "arguments-mini.jpg"
       url = "project/arguments_mini"
 
