--- a/site/config.toml
+++ b/site/config.toml
@@ -220,12 +220,15 @@ disableKinds = ["taxonomy"]
   # Tiles Section
   [params.tiles]
     showcase = [
+      "personal_project/sound_modeling",
+      "personal_project/fireworks_nuts_and_bolts",
       "school_project/project_sulphur",
       "school_project/agr",
       "school_project/mayor",
       "school_project/barock_battles",
       "personal_project/jellyventure",
-      "personal_project/asterisk_mini"
+      "personal_project/asterisk_mini",
+      "personal_project/operating_system"
     ]
 
   # Contact section
